--- a/.env.default
+++ b/.env.default
@@ -1,15 +1,20 @@
-LEGACY_BLOCKS_URL=https://aws.amazon.com
-LEGACY_TRANSACTIONS_URL=https://aws.amazon.com
-LEGACY_TAGS_URL=https://aws.amazon.com
+LEGACY_BLOCKS_URL=
+LEGACY_TRANSACTIONS_URL=
+LEGACY_TAGS_URL=
 
-LTS_BLOCKS_URL=https://aws.amazon.com
-LTS_TRANSACTIONS_URL=https://aws.amazon.com
-LTS_TAGS_URL=https://aws.amazon.com
+LTS_BLOCKS_URL=
+LTS_TRANSACTIONS_URL=
+LTS_TAGS_URL=
 
-OUTPUT_FOLDER=/arweave/parsed
-OUTPUT_URL=https://aws.amazon.com
+LEGACY_TRANSACTIONS=/arweave/legacy/transaction.csv
+OUTPUT_TRANSACTIONS=/arweave/parsed/transaction.csv
 
-KEY=...
-SECRET=...
-ENDPOINT=...
-NAME=...
+ARCHIVE_PATH=
+ARCHIVE_URL=
+
+KEY=
+SECRET=
+ENDPOINT=
+NAME=
+
+INDICES=["App-Name", "app", "domain", "namespace"]
