Separate Transactions and Tags into chunks

--- a/.env.default
+++ b/.env.default
@@ -7,7 +7,10 @@ LTS_TRANSACTIONS_URL=
 LTS_TAGS_URL=
 
 LEGACY_TRANSACTIONS=/arweave/legacy/transaction.csv
-OUTPUT_TRANSACTIONS=/arweave/parsed/transaction.csv
+OUTPUT_TRANSACTIONS=/arweave/parsed
+
+LEGACY_TAGS=/arweave/legacy/tags.csv
+OUTPUT_TAGS=/arweave/parsed
 
 ARCHIVE_PATH=
 ARCHIVE_URL=
