Use an SQL PATH for generating SQL bash scripts

--- a/.env.default
+++ b/.env.default
@@ -12,6 +12,8 @@ OUTPUT_TRANSACTIONS=/arweave/parsed
 LEGACY_TAGS=/arweave/legacy/tags.csv
 OUTPUT_TAGS=/arweave/parsed
 
+SQL_PATH=/arweave/snapshot
+
 ARCHIVE_PATH=
 ARCHIVE_URL=
 
