[f] 974 - Create new transform script
- Create the new service.transform file, rename the old one into service.legacy.ts
- Create thew new script in package.json to run the new transform
- Update readme

[#179201974] https://www.pivotaltracker.com/story/show/179201974

--- a/.env.default
+++ b/.env.default
@@ -1,6 +1,8 @@
 LEGACY_TRANSACTIONS=/arweave/legacy/transaction.csv
 OUTPUT_TRANSACTIONS=/arweave/parsed
 
+TRANSACTIONS=/arweave/transaction.csv
+
 LEGACY_TAGS=/arweave/legacy/tags.csv
 OUTPUT_TAGS=/arweave/parsed
 
